Fixed problem with resizing entities when typing zero as width or height.